rendered/envs/alpha/pacoloco/deployment-pacoloco.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: pacoloco
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pacoloco
  template:
    metadata:
      annotations:
        checksum/config: c52e3dd6900ffa9778b633330ec59ed9
      labels:
        app.kubernetes.io/name: pacoloco
    spec:
      containers:
        - image: oci.zebradil.dev/ghcr.io-cache/anatol/pacoloco@sha256:2bdda30e637b884d0feb4b2bbe08de4e3822dab0a6cfecb220170a853be3628d
          name: pacoloco
          ports:
            - containerPort: 9129
              name: http
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 16Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
          volumeMounts:
            - mountPath: /etc/pacoloco.yaml
              name: config
              readOnly: true
              subPath: pacoloco.yaml
            - mountPath: /var/cache/pacoloco
              name: cache
      volumes:
        - configMap:
            name: config
          name: config
        - name: cache
          persistentVolumeClaim:
            claimName: cache
