rendered/envs/alpha/pacoloco/service-pacoloco.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: pacoloco
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: pacoloco
