rendered/envs/alpha/pacoloco/ingress-pacoloco.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: pacoloco
spec:
  rules:
    - host: pacoloco.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: pacoloco
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: pacoloco.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: pacoloco
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: pacoloco.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: pacoloco
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: pacoloco.junior.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: pacoloco
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: pacoloco.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: pacoloco
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: pacoloco.junior.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: pacoloco
                port:
                  name: http
            path: /
            pathType: Prefix
